working strikethrough line feature

--- a/style.css
+++ b/style.css
@@ -46,10 +46,56 @@ main {
   display: grid;
   place-items: center;
 }
+/* form style */
+form {
+  margin-top: 20px;
+}
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+input[type="text"] {
+  padding: 8px;
+  margin-bottom: 10px;
+  width: 200px;
+}
+button[type="submit"] {
+  padding: 10px 20px;
+  font-size: 18px;
+  background-color: #808080;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+button[type="submit"]:hover {
+  background-color: #606060;
+}
+h1 {
+  font-size: 1.8rem;
+}
+.container {
+  position: relative;
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  .turn {
+    margin-bottom: 0.5rem;
+  }
+}
+.turn {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  transform: translateY(calc(-100% - 8px));
+}
 .board {
   display: grid;
   max-height: 80vh;
   max-width: 80vw;
+  width: 500px;
   aspect-ratio: 1/1;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -68,4 +114,30 @@ main {
   border: 1px solid grey;
   background: lightyellow;
   cursor: pointer;
+}
+.deactivated .cell {
+  background: lightgrey;
+  color: grey;
+  cursor: not-allowed;
+}
+
+.retry-button {
+  padding: 10px 20px;
+  font-size: 18px;
+  margin-top: 20px;
+  background-color: #808080; /* Gray */
+  color: #fff; /* White */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: translateY(calc(100% + 20px));
+}
+
+.retry-button:hover {
+  background-color: #606060;
 }
